# trabalho-1-turingincomplet

./: CMakeLists.txt  README.md  autor.md
data/: t1.txt  t2.txt
include/: KenoBet.h  func.h
src/: KenoBet.cpp  func.cpp  main.cpp
